# projekt-do-widzenia

./: .gitignore  README.md  analyze_optuna_results.py  docker-compose.yml  pyproject.toml  results.csv  split.csv  test_model.py  train_optuna.py  train_timesformer.ipynb  update.py
