[project]
name = "ml-time-series-forecasting-course-solutions"
version = "1.0.0"
description = ""
authors = [{ name = "j-adamczyk", email = "jadamczy@agh.edu.pl" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "decord>=0.6.0",
    "jupyter",
    "matplotlib",
    "neuralforecast",
    "nixtla>=0.7.2",
    "pmdarima",
    "pyarrow",
    "scikit-learn",
    "seaborn",
    "sktime",
    "statsforecast",
    "timesfm==1.3.0",
    "torch",
    "torchvision>=0.24.1",
    "transformers[torch]>=4.57.3",
    "wandb>=0.23.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]
